--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;1,800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -13,133 +15,114 @@
   </head>
 
   <body id="home">
-    <div class="container">
-      <header>
-        <nav>
-          <ul class="menu">
-            <li class="menu-item"><a href="#home">Home</a></li>
-            <li class="menu-item"><a href="#introduction">About</a></li>
-            <li class="menu-item"><a href="#projects">Projects</a></li>
-            <li class="menu-item"><a href="#footer">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <section class="about" id="about">
-        <div id="home">
-          <h1 class="about-title">
-            Edward. <br /><span class="hide">Front-end Developer.</span>
-          </h1>
-        </div>
-        <img class="avatar" src="assets/Designer-Life.png" alt="" />
-      </section>
+    <section class="headline">
+      <div class="headline-info">
+        <h1>Edward</h1>
+        <p>Front-End Developer</p>
+      </div>
 
-      <section id="introduction">
-        <div class="introduction-info">
-          <div class="story">
-            <span class="md-2">My </span>journey goes back to the early 2000's
-            Myspace days where I used to get lost for hours designing &&
-            redesigning layouts. It was an absolute revelation that I could
-            manipulate what was on the screen through odd symbols and numbers. I
-            didn't understand it, but I was completely in love with the artistic
-            aspect of it all.
-            <br />
-            <br />
+      <img class="headline-img" src="assets/Designer-Life.png" alt="avatar" />
+    </section>
+
+    <section id="about" class="about">
+      <div class="story">
+        <h1>About Me</h1>
+        <p>
+          My journey goes back to the early 2000's Myspace days where I used to
+          get lost for hours designing layouts
+          <br /><br />It was an absolute revelation that I could manipulate what
+          was on the screen through odd symbols and numbers. I was completely in
+          love with the artistic aspect <br /><br />In May of 2022, I decided to
+          embark on the journey of teaching myself JavaScript and the many other
+          technologies that go into creating an amazing user experience.
+          <br /><br />My goal is to join a team of self-starters and build
+          amazing things together
+        </p>
+      </div>
+      <div class="story-illustration">
+        <img src="assets/webdev.svg" alt="" />
+      </div>
+    </section>
+
+    <section id="projects" class="projects">
+      <div class="proj-1">
+        <img
+          src="https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
+        />
+
+        <div class="proj-1-info">
+          <h1 class="title">title</h1>
+          <p class="info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim error,
+            optio necessitatibus quas, numquam esse doloribus ab amet
+            consequatur, quidem minus reprehenderit
+          </p>
+          <div class="btn-container">
+            <button>Demo</button>
+            <button>Source Code</button>
           </div>
         </div>
-      </section>
+      </div>
 
-      <section class="projects" id="projects">
-        <h1>Projects</h1>
-        <div class="project-1">
-          <img
-            src="https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
-          />
+      <div class="proj-2">
+        <img
+          src="https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
+        />
 
-          <div class="info">
-            <h1 class="info-title">title</h1>
-            <p class="info-para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-              voluptate ut quidem facilis tempora explicabo, temporibus ipsa
-              iure unde vitae iusto veritatis labore neque, veniam, aliquid
-              ullam cum qui quis. A itaque consequuntur dignissimos nisi rerum
-              maiores perspiciatis accusamus eaque saepe corrupti, perferendis
-              cum quam accusantium, excepturi incidunt doloremque ducimus!
-            </p>
-            <div class="btns-container">
-              <button class="info-btn-source-2">source code</button>
-              <button class="info-btn-github-2">github</button>
-            </div>
+        <div class="proj-2-info">
+          <h1 class="title">title</h1>
+          <p class="info">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
+            voluptates vero atque praesentium harum deleniti reiciendis, maiores
+            blanditiis ducimus voluptas?
+          </p>
+          <div class="btn-container">
+            <button>Demo</button>
+            <button>Source Code</button>
           </div>
         </div>
+      </div>
 
-        <div class="project-2">
-          <img
-            src="https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
-          />
-
-          <div class="info">
-            <h1 class="info-title">title</h1>
-            <p class="info-para">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores
-              exercitationem obcaecati, commodi iusto ea optio quia at.
-              Doloribus id praesentium fuga dolores neque itaque asperiores
-              rerum doloremque accusantium recusandae ipsam suscipit, nulla
-              earum aspernatur voluptatum repudiandae. Magnam facere delectus
-              provident tenetur similique maxime voluptate dolore iusto
-              doloremque, porro cupiditate. Incidunt!
-            </p>
-            <div class="btns-container">
-              <button class="info-btn-source-2">source code</button>
-              <button class="info-btn-github-2">github</button>
-            </div>
+      <div class="proj-3">
+        <img
+          src="https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
+        />
+        <div class="proj-3-info">
+          <h1 class="title">title</h1>
+          <p class="info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+            cupiditate inventore repellat iure aut dolorem error, suscipit ea
+            dolores officia, sapiente ab asperiores hic
+          </p>
+          <div class="btn-container">
+            <button>Demo</button>
+            <button>Source Code</button>
           </div>
         </div>
+      </div>
+    </section>
 
-        <div class="project-3">
-          <img
-            src="https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
-          />
-
-          <div class="info">
-            <h1 class="info-title">title</h1>
-            <p class="info-para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Praesentium cupiditate inventore repellat iure aut dolorem error,
-              suscipit ea dolores officia, sapiente ab asperiores hic in enim
-              necessitatibus eveniet magnam. Voluptatum sunt iure aliquam
-              incidunt a delectus ea odit ratione! Minus eum asperiores quas
-              atque veniam dolores eius dolorem non possimus.
-            </p>
-            <div class="btns-container">
-              <button class="info-btn-source-2">source code</button>
-              <button class="info-btn-github-2">github</button>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <footer id="footer">
-        <form action="https://formsubmit.co/edtolo92@gmail.com" method="POST">
-          Subject:
-          <input type="text" placeholder="Subject" />
-
-          Name:
-          <input type="text" name="name" placeholder="name" required />
-          Email
-          <input
-            type="email"
-            name="email"
-            placeholder="Email Address"
-            required
-          />
-          Message:
-          <input type="text" placeholder="message" />
-
-          <button type="submit">Contact</button>
-        </form>
-      </footer>
-    </div>
+    <section id="contact" class="contact">
+      <form action="https://formsubmit.co/edtolo92@gmail.com" method="POST">
+        <h1 class="form-heading">Contact</h1>
+        <input type="text" placeholder="Subject" />
+        <input type="text" name="Name" placeholder="Name" required />
+        <input type="email" name="email" placeholder="Email" required />
+        <input type="text" placeholder="Message" />
+        <button type="submit">Contact</button>
+      </form>
+    </section>
 
     <script src="app.js"></script>
   </body>
