--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
         <h1>About Me</h1>
         <p>
           My journey goes back to the early 2000's Myspace days where I used to
-          get lost for hours designing layouts
-          <br /><br />It was an absolute revelation that I could manipulate what
-          was on the screen through odd symbols and numbers. I was completely in
-          love with the artistic aspect <br /><br />In May of 2022, I decided to
-          embark on the journey of teaching myself JavaScript and the many other
-          technologies that go into creating an amazing user experience.
-          <br /><br />My goal is to join a team of self-starters and build
+          get lost for hours designing layouts It was an absolute revelation
+          that I could manipulate what was on the screen through odd symbols and
+          numbers. I was completely in love with the artistic aspectIn May of
+          2022, I decided to embark on the journey of teaching myself JavaScript
+          and the many other technologies that go into creating an amazing user
+          experience. My goal is to join a team of self-starters and build
           amazing things together
         </p>
       </div>
