--- a/index.html
+++ b/index.html
@@ -56,57 +56,50 @@
 
     <section id="projects" class="projects">
       <div class="proj-1">
-        <img
-          src="https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
-        />
+        <img src="assets/CHUCK_NORRIS_API_FUN.png" />
 
         <div class="proj-1-info">
-          <h1 class="title">title</h1>
+          <h1 class="title">API - CHUCK NORRIS JOKES</h1>
           <p class="info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim error,
-            optio necessitatibus quas, numquam esse doloribus ab amet
-            consequatur, quidem minus reprehenderit
+            Utilizes Asynchronous JavaScript Fetch request to access the Chuck
+            Norris Jokes Api. Data is displayed dynamically and is also combined
+            with CSS Grid and Flexbox in order to create a response mobile first
+            layout.
           </p>
           <div class="btn-container">
-            <button>Demo</button>
-            <button>Source Code</button>
+            <a href="https://xed43.github.io/LTIMES_CLONE/">Demo</a>
+            <a href="https://github.com/xed43/LTIMES_CLONE">Source Code</a>
           </div>
         </div>
       </div>
 
       <div class="proj-2">
-        <img
-          src="https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
-        />
+        <img src="assets/LATIMES.png" />
 
         <div class="proj-2-info">
-          <h1 class="title">title</h1>
+          <h1 class="title">LA TIMES CLONE</h1>
           <p class="info">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
-            voluptates vero atque praesentium harum deleniti reiciendis, maiores
-            blanditiis ducimus voluptas?
+            JavaScript for interactivity combined with CSS Grid, Flexbox and
+            media queries in order to achieve a fully responsive layout.
           </p>
           <div class="btn-container">
-            <button>Demo</button>
-            <button>Source Code</button>
+            <a href="https://xed43.github.io/LTIMES_CLONE/">Demo</a>
+            <a href="https://github.com/xed43/LTIMES_CLONE">Source Code</a>
           </div>
         </div>
       </div>
 
       <div class="proj-3">
-        <img
-          src="https://images.unsplash.com/photo-1518837695005-2083093ee35b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&auto=format&fit=crop&w=900&q=60"
-        />
+        <img src="assets/Library_Search.png" />
         <div class="proj-3-info">
-          <h1 class="title">title</h1>
+          <h1 class="title">React - Monster Search</h1>
           <p class="info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-            cupiditate inventore repellat iure aut dolorem error, suscipit ea
-            dolores officia, sapiente ab asperiores hic
+            React Hooks, such as useState and useEffect for state management and
+            api fetch request.
           </p>
           <div class="btn-container">
-            <button>Demo</button>
-            <button>Source Code</button>
+            <a href="https://xed43.github.io/LTIMES_CLONE/">Demo</a>
+            <a href="https://github.com/xed43/LTIMES_CLONE">Source Code</a>
           </div>
         </div>
       </div>
