--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>Front-End Developer</p>
       </div>
 
-      <img class="headline-img" src="assets/Designer-Life.png" alt="avatar" />
+      <img class="headline-img" src="assets/headshot.jpeg" alt="avatar" />
     </section>
 
     <section id="about" class="about">
@@ -50,56 +50,60 @@
         </p>
       </div>
       <div class="story-illustration">
-        <img src="assets/webdev.svg" alt="" />
+        <img src="assets/Designer-Life.png" alt="" />
       </div>
     </section>
 
     <section id="projects" class="projects">
       <div class="proj-1">
-        <img src="assets/CHUCK_NORRIS_API_FUN.png" />
+        <img src="assets/dbz_game.png" />
 
         <div class="proj-1-info">
-          <h1 class="title">API - CHUCK NORRIS JOKES</h1>
+          <h1 class="title">JavaScript Game - DBZ</h1>
           <p class="info">
-            Utilizes Asynchronous JavaScript Fetch request to access the Chuck
-            Norris Jokes Api. Data is displayed dynamically and is also combined
-            with CSS Grid and Flexbox in order to create a response mobile first
-            layout.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit
+            numquam explicabo voluptas obcaecati illum corporis asperiores ad
+            commodi molestiae laboriosam nobis error pariatur, dolorum fugiat,
+            saepe, similique cupiditate at cumque.
           </p>
           <div class="btn-container">
-            <a href="https://xed43.github.io/LTIMES_CLONE/">Demo</a>
-            <a href="https://github.com/xed43/LTIMES_CLONE">Source Code</a>
+            <a href="https://xed43.github.io/DBZ_FIGHTER_GAME/">Demo</a>
+            <a href="https://github.com/xed43/DBZ_FIGHTER_GAME">Source Code</a>
           </div>
         </div>
       </div>
 
       <div class="proj-2">
-        <img src="assets/LATIMES.png" />
+        <img src="assets/Library_Search.png" />
 
         <div class="proj-2-info">
-          <h1 class="title">LA TIMES CLONE</h1>
+          <h1 class="title">React - Search Monsters</h1>
           <p class="info">
-            JavaScript for interactivity combined with CSS Grid, Flexbox and
-            media queries in order to achieve a fully responsive layout.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
+            beatae quis, explicabo alias molestiae doloremque dolorum ea?
+            Deserunt adipisci unde saepe earum culpa quis deleniti quas
+            excepturi alias. Nostrum, dolor!
           </p>
           <div class="btn-container">
-            <a href="https://xed43.github.io/LTIMES_CLONE/">Demo</a>
-            <a href="https://github.com/xed43/LTIMES_CLONE">Source Code</a>
+            <a href="https://xed43.github.io/Search_Monsters/">Demo</a>
+            <a href="https://github.com/xed43/Search_Monsters">Source Code</a>
           </div>
         </div>
       </div>
 
       <div class="proj-3">
-        <img src="assets/Library_Search.png" />
+        <img src="assets/Services_Site.png" />
         <div class="proj-3-info">
-          <h1 class="title">React - Monster Search</h1>
+          <h1 class="title">Services Site - Responsive Design</h1>
           <p class="info">
-            React Hooks, such as useState and useEffect for state management and
-            api fetch request.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+            officia ut architecto qui explicabo praesentium animi culpa dolores
+            obcaecati quod voluptatibus id maxime facilis tempora iste, ex
+            aspernatur amet ab at! Quaerat labore repellendus id.
           </p>
           <div class="btn-container">
-            <a href="https://xed43.github.io/LTIMES_CLONE/">Demo</a>
-            <a href="https://github.com/xed43/LTIMES_CLONE">Source Code</a>
+            <a href="https://xed43.github.io/Services_Site/">Demo</a>
+            <a href="https://github.com/xed43/Services_Site/">Source Code</a>
           </div>
         </div>
       </div>
