redesigned portfolio site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;1,800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -26,99 +32,85 @@
       </nav>
     </header>
 
-    <section class="headline">
-      <div class="headline-info">
-        <h1>Edward</h1>
-        <p>Front-End Developer</p>
-      </div>
+    <main>
+      <section class="headline">
+        <div class="headline-info">
+          <h1>Edward</h1>
+          <p>Front End Developer</p>
+        </div>
 
-      <img class="headline-img" src="assets/headshot.jpeg" alt="avatar" />
-    </section>
+        <img class="headline-img" src="assets/headshot.jpeg" alt="avatar" />
+      </section>
 
-    <section id="about" class="about">
-      <div class="story">
-        <h1>About Me</h1>
-        <p>
-          My journey goes back to the early 2000's Myspace days where I used to
-          get lost for hours designing layouts It was an absolute revelation
-          that I could manipulate what was on the screen through odd symbols and
-          numbers. I was completely in love with the artistic aspectIn May of
-          2022, I decided to embark on the journey of teaching myself JavaScript
-          and the many other technologies that go into creating an amazing user
-          experience. My goal is to join a team of self-starters and build
-          amazing things together
-        </p>
-      </div>
-      <div class="story-illustration">
-        <img src="assets/Designer-Life.png" alt="" />
-      </div>
-    </section>
-
-    <section id="projects" class="projects">
-      <div class="proj-1">
-        <img src="assets/dbz_game.png" />
-
-        <div class="proj-1-info">
-          <h1 class="title">JavaScript Game - DBZ</h1>
-          <p class="info">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit
-            numquam explicabo voluptas obcaecati illum corporis asperiores ad
-            commodi molestiae laboriosam nobis error pariatur, dolorum fugiat,
-            saepe, similique cupiditate at cumque.
+      <section id="about" class="about">
+        <div class="story">
+          <h1 class="story-title">MY STORY</h1>
+          <p>
+            My journey goes back to the early 2000's Myspace days where I used
+            to get lost for hours designing layouts. It was an absolute
+            revelation that I could manipulate what was on the screen through
+            odd symbols and numbers. I was completely in love with the artistic
+            aspect of it all.
+            <br /><br />In May of 2022, I decided to embark on the journey of
+            teaching myself JavaScript and the many other technologies that go
+            into creating an amazing user experience. My goal is to join a team
+            of self-starters and build amazing things together
           </p>
-          <div class="btn-container">
-            <a href="https://xed43.github.io/DBZ_FIGHTER_GAME/">Demo</a>
-            <a href="https://github.com/xed43/DBZ_FIGHTER_GAME">Source Code</a>
+        </div>
+      </section>
+
+      <section id="projects" class="projects">
+        <div class="proj-1">
+          <img src="assets/dbz_game.png" />
+
+          <div class="proj-1-info">
+            <h1 class="title">JavaScript Game - DragonJump()</h1>
+            <p class="info">Jump to avoid the super evil villain Freeza!</p>
+            <div class="btn-container">
+              <a href="https://xed43.github.io/DBZ_FIGHTER_GAME/">Demo</a>
+              <a href="https://github.com/xed43/DBZ_FIGHTER_GAME"
+                >Source Code</a
+              >
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="proj-2">
-        <img src="assets/Library_Search.png" />
+        <div class="proj-2">
+          <img src="assets/Library_Search.png" />
 
-        <div class="proj-2-info">
-          <h1 class="title">React - Search Monsters</h1>
-          <p class="info">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
-            beatae quis, explicabo alias molestiae doloremque dolorum ea?
-            Deserunt adipisci unde saepe earum culpa quis deleniti quas
-            excepturi alias. Nostrum, dolor!
-          </p>
-          <div class="btn-container">
-            <a href="https://xed43.github.io/Search_Monsters/">Demo</a>
-            <a href="https://github.com/xed43/Search_Monsters">Source Code</a>
+          <div class="proj-2-info">
+            <h1 class="title">React - MonsterSearch()</h1>
+            <p class="info">Search for your favorite monster!</p>
+            <div class="btn-container">
+              <a href="https://xed43.github.io/Search_Monsters/">Demo</a>
+              <a href="https://github.com/xed43/Search_Monsters">Source Code</a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="proj-3">
-        <img src="assets/Services_Site.png" />
-        <div class="proj-3-info">
-          <h1 class="title">Services Site - Responsive Design</h1>
-          <p class="info">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-            officia ut architecto qui explicabo praesentium animi culpa dolores
-            obcaecati quod voluptatibus id maxime facilis tempora iste, ex
-            aspernatur amet ab at! Quaerat labore repellendus id.
-          </p>
-          <div class="btn-container">
-            <a href="https://xed43.github.io/Services_Site/">Demo</a>
-            <a href="https://github.com/xed43/Services_Site/">Source Code</a>
+        <div class="proj-3">
+          <img src="assets/Services_Site.png" />
+          <div class="proj-3-info">
+            <h1 class="title">Responsive Design</h1>
+            <p class="info">Do you have services that people need?</p>
+            <div class="btn-container">
+              <a href="https://xed43.github.io/Services_Site/">Demo</a>
+              <a href="https://github.com/xed43/Services_Site/">Source Code</a>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="contact" class="contact">
-      <form action="https://formsubmit.co/edtolo92@gmail.com" method="POST">
-        <h1 class="form-heading">Contact</h1>
-        <input type="text" placeholder="Subject" />
-        <input type="text" name="Name" placeholder="Name" required />
-        <input type="email" name="email" placeholder="Email" required />
-        <input type="text" placeholder="Message" />
-        <button type="submit">Contact</button>
-      </form>
-    </section>
+      <section id="contact" class="contact">
+        <form action="https://formsubmit.co/edtolo92@gmail.com" method="POST">
+          <input type="text" placeholder="Subject" />
+          <input type="text" name="Name" placeholder="Name" required />
+          <input type="email" name="email" placeholder="Email" required />
+          <input type="text" placeholder="Message" />
+          <button type="submit">Contact</button>
+        </form>
+      </section>
+    </main>
 
     <script src="app.js"></script>
   </body>
