finished portfolio site for now

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
       href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Edward's Portfolio</title>
   </head>
@@ -36,10 +48,8 @@
       <section class="headline">
         <div class="headline-info">
           <h1>Edward</h1>
-          <p>Front End Developer</p>
+          <p>Front-End Developer 🧠</p>
         </div>
-
-        <img class="headline-img" src="assets/headshot.jpeg" alt="avatar" />
       </section>
 
       <section id="about" class="about">
@@ -64,7 +74,7 @@
           <img src="assets/dbz_game.png" />
 
           <div class="proj-1-info">
-            <h1 class="title">JavaScript Game - DragonJump()</h1>
+            <h1 class="title">DragonBall Jump!</h1>
             <p class="info">Jump to avoid the super evil villain Freeza!</p>
             <div class="btn-container">
               <a href="https://xed43.github.io/DBZ_FIGHTER_GAME/">Demo</a>
@@ -79,7 +89,7 @@
           <img src="assets/Library_Search.png" />
 
           <div class="proj-2-info">
-            <h1 class="title">React - MonsterSearch()</h1>
+            <h1 class="title">Monster Search - ReactJS</h1>
             <p class="info">Search for your favorite monster!</p>
             <div class="btn-container">
               <a href="https://xed43.github.io/Search_Monsters/">Demo</a>
@@ -88,10 +98,22 @@
           </div>
         </div>
 
+        <div class="proj-new-1">
+          <img src="assets/landingpage.png" />
+          <div class="proj-new-info">
+            <h1 class="title">Landing Page</h1>
+            <p class="info">Tailor Data Your Own Way</p>
+            <div class="btn-container">
+              <a href="https://xed43.github.io/landing_page/">Demo</a>
+              <a href="xed43.github.io/landing_page/">Source Code</a>
+            </div>
+          </div>
+        </div>
+
         <div class="proj-3">
           <img src="assets/Services_Site.png" />
           <div class="proj-3-info">
-            <h1 class="title">Responsive Design</h1>
+            <h1 class="title">Services Site</h1>
             <p class="info">Do you have services that people need?</p>
             <div class="btn-container">
               <a href="https://xed43.github.io/Services_Site/">Demo</a>
@@ -102,6 +124,7 @@
       </section>
 
       <section id="contact" class="contact">
+        <h1 class="contact-title">Contact</h1>
         <form action="https://formsubmit.co/edtolo92@gmail.com" method="POST">
           <input type="text" placeholder="Subject" />
           <input type="text" name="Name" placeholder="Name" required />
