fixed some bugs

--- a/index.html
+++ b/index.html
@@ -77,8 +77,14 @@
             <h1 class="title">DragonBall Jump!</h1>
             <p class="info">Jump to avoid the super evil villain Freeza!</p>
             <div class="btn-container">
-              <a href="https://xed43.github.io/DBZ_FIGHTER_GAME/">Demo</a>
-              <a href="https://github.com/xed43/DBZ_FIGHTER_GAME"
+              <a
+                href="https://xed43.github.io/DBZ_FIGHTER_GAME/"
+                target="_blank"
+                >Demo</a
+              >
+              <a
+                href="https://github.com/xed43/DBZ_FIGHTER_GAME"
+                target="_blank"
                 >Source Code</a
               >
             </div>
@@ -92,8 +98,12 @@
             <h1 class="title">Monster Search - ReactJS</h1>
             <p class="info">Search for your favorite monster!</p>
             <div class="btn-container">
-              <a href="https://xed43.github.io/Search_Monsters/">Demo</a>
-              <a href="https://github.com/xed43/Search_Monsters">Source Code</a>
+              <a href="https://xed43.github.io/Search_Monsters/" target="_blank"
+                >Demo</a
+              >
+              <a href="https://github.com/xed43/Search_Monsters" target="_blank"
+                >Source Code</a
+              >
             </div>
           </div>
         </div>
@@ -104,8 +114,12 @@
             <h1 class="title">Landing Page</h1>
             <p class="info">Tailor Data Your Own Way</p>
             <div class="btn-container">
-              <a href="https://xed43.github.io/landing_page/">Demo</a>
-              <a href="xed43.github.io/landing_page/">Source Code</a>
+              <a href="https://xed43.github.io/landing_page/" target="_blank"
+                >Demo</a
+              >
+              <a href="https://github.com/xed43/landing_page" target="_blank"
+                >Source Code</a
+              >
             </div>
           </div>
         </div>
@@ -116,8 +130,12 @@
             <h1 class="title">Services Site</h1>
             <p class="info">Do you have services that people need?</p>
             <div class="btn-container">
-              <a href="https://xed43.github.io/Services_Site/">Demo</a>
-              <a href="https://github.com/xed43/Services_Site/">Source Code</a>
+              <a href="https://xed43.github.io/Services_Site/" target="_blank"
+                >Demo</a
+              >
+              <a href="https://github.com/xed43/Services_Site/" target="_blank"
+                >Source Code</a
+              >
             </div>
           </div>
         </div>
